[package]
name = "minidom_writer"
version = "1.0.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
license = "MIT"
description = "Helper to write into a std::io::Write a minidom::Element"
homepage = "https://github.com/CanalTP/minidom_writer"
repository = "https://github.com/CanalTP/minidom_writer"
documentation = "https://docs.rs/minidom_writer"
edition = "2018"
readme = "README.md"
keywords = ["minidom", "extension", "writer"]

[dependencies]
minidom = "0.12"
quick-xml = "0.17"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "0.6"
